[project]
name = "puzpy"
description = "python crossword puzzle library"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = [ "LICENSE" ]
version = "0.4.0"
requires-python = ">=3.8"
keywords = [ "puz", "crosswords", "crossword", "puzzle", "acrosslite", "xword", "xwords" ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Puzzle Games",
]
authors = [
    { name = "Alex Dejarnatt", email = "adejarnatt@gmail.com" },
]
maintainers = [
    { name = "Alex Dejarnatt", email = "adejarnatt@gmail.com" },
]

[project.optional-dependencies]
dev = ["pytest", "pytest-codeblocks", "flake8", "coverage"]
publish = ["build", "twine"]

[tool.pytest.ini_options]
addopts = "--codeblocks"
testpaths = ["README.md", "."]
python_files = ["tests.py", "test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.setuptools]
py-modules = ["puz"]

[project.urls]
Repository = "https://github.com/alexdej/puzpy.git"
Issues = "https://github.com/alexdej/puzpy/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

